@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -34,7 +35,7 @@ import org.jabref.logic.importer.fetcher.IEEE;
 import org.jabref.logic.importer.fetcher.SpringerNatureWebFetcher;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.model.study.Study;
-import org.jabref.model.study.StudyDatabase;
+import org.jabref.model.study.StudyCatalog;
 import org.jabref.model.study.StudyQuery;
 
 import org.eclipse.jgit.api.errors.GitAPIException;
@@ -56,11 +57,13 @@ public class ManageStudyDefinitionViewModel {
     private final StringProperty title = new SimpleStringProperty();
     private final ObservableList<String> authors = FXCollections.observableArrayList();
     private final ObservableList<String> researchQuestions = FXCollections.observableArrayList();
-    private final ObservableList<String> queries = FXCollections.observableArrayList();
+    private final ObservableList<StudyQuery> queries = FXCollections.observableArrayList();
+
     // Observe changes to each item's enabledProperty so bindings re-evaluate when catalogs are toggled
-    private final ObservableList<StudyCatalogItem> databases = FXCollections.observableArrayList(
+    private final ObservableList<StudyCatalogItem> catalogs = FXCollections.observableArrayList(
             item -> new javafx.beans.Observable[] {item.enabledProperty()}
     );
+
     // Hold the complement of databases for the selector
     private final SimpleStringProperty directory = new SimpleStringProperty();
 
@@ -82,17 +85,17 @@ public class ManageStudyDefinitionViewModel {
                                           @NonNull WorkspacePreferences workspacePreferences,
                                           @NonNull GitPreferences gitPreferences,
                                           @NonNull DialogService dialogService) {
-        databases.addAll(WebFetchers.getSearchBasedFetchers(importFormatPreferences, importerPreferences)
-                                    .stream()
-                                    .map(SearchBasedFetcher::getName)
-                                    // The user wants to select specific fetchers
-                                    // The fetcher summarizing ALL fetchers can be emulated by selecting ALL fetchers (which happens rarely when doing an SLR)
-                                    .filter(name -> !CompositeSearchBasedFetcher.FETCHER_NAME.equals(name))
-                                    .map(name -> {
-                                        boolean enabled = DEFAULT_SELECTION.contains(name);
-                                        return new StudyCatalogItem(name, enabled);
-                                    })
-                                    .toList());
+        catalogs.addAll(WebFetchers.getSearchBasedFetchers(importFormatPreferences, importerPreferences)
+                                   .stream()
+                                   .map(SearchBasedFetcher::getName)
+                                   // The user wants to select specific fetchers
+                                   // The fetcher summarizing ALL fetchers can be emulated by selecting ALL fetchers (which happens rarely when doing an SLR)
+                                   .filter(name -> !CompositeSearchBasedFetcher.FETCHER_NAME.equals(name))
+                                   .map(name -> {
+                                       boolean enabled = DEFAULT_SELECTION.contains(name);
+                                       return new StudyCatalogItem(name, enabled);
+                                   })
+                                   .toList());
         this.dialogService = dialogService;
         this.workspacePreferences = workspacePreferences;
         this.gitPreferences = gitPreferences;
@@ -116,19 +119,22 @@ public class ManageStudyDefinitionViewModel {
         authors.addAll(study.getAuthors());
         title.setValue(study.getTitle());
         researchQuestions.addAll(study.getResearchQuestions());
-        queries.addAll(study.getQueries().stream().map(StudyQuery::getQuery).toList());
-        List<StudyDatabase> studyDatabases = study.getDatabases();
-        databases.addAll(WebFetchers.getSearchBasedFetchers(importFormatPreferences, importerPreferences)
-                                    .stream()
-                                    .map(SearchBasedFetcher::getName)
-                                    // The user wants to select specific fetchers
-                                    // The fetcher summarizing ALL fetchers can be emulated by selecting ALL fetchers (which happens rarely when doing an SLR)
-                                    .filter(name -> !CompositeSearchBasedFetcher.FETCHER_NAME.equals(name))
-                                    .map(name -> {
-                                        boolean enabled = studyDatabases.contains(new StudyDatabase(name, true));
-                                        return new StudyCatalogItem(name, enabled);
-                                    })
-                                    .toList());
+        queries.addAll(study.getQueries());
+        Map<String, StudyCatalog> catalogsByName = study.getCatalogs().stream()
+                                                        .collect(Collectors.toMap(StudyCatalog::getName, catalog -> catalog));
+        catalogs.addAll(WebFetchers.getSearchBasedFetchers(importFormatPreferences, importerPreferences)
+                                   .stream()
+                                   .map(SearchBasedFetcher::getName)
+                                   // The user wants to select specific fetchers
+                                   // The fetcher summarizing ALL fetchers can be emulated by selecting ALL fetchers (which happens rarely when doing an SLR)
+                                   .filter(name -> !CompositeSearchBasedFetcher.FETCHER_NAME.equals(name))
+                                   .map(name -> {
+                                       StudyCatalog savedCatalog = catalogsByName.get(name);
+                                       boolean enabled = savedCatalog != null && savedCatalog.isEnabled();
+                                       String reason = savedCatalog != null ? savedCatalog.getReason() : "";
+                                       return new StudyCatalogItem(name, enabled, reason);
+                                   })
+                                   .toList());
 
         this.directory.set(studyDirectory.toString());
         this.workspacePreferences = workspacePreferences;
@@ -156,7 +162,7 @@ public class ManageStudyDefinitionViewModel {
 
         catalogsValidationMessage.bind(Bindings.when(
                                                        Bindings.createBooleanBinding(() ->
-                                                               databases.stream().noneMatch(StudyCatalogItem::isEnabled), databases))
+                                                               catalogs.stream().noneMatch(StudyCatalogItem::isEnabled), catalogs))
                                                .then(Localization.lang("At least one catalog must be selected"))
                                                .otherwise(""));
 
@@ -170,7 +176,7 @@ public class ManageStudyDefinitionViewModel {
                                                                      Bindings.isEmpty(queries)
                                                              ),
                                                              Bindings.createBooleanBinding(() ->
-                                                                     databases.stream().noneMatch(StudyCatalogItem::isEnabled), databases)
+                                                                     catalogs.stream().noneMatch(StudyCatalogItem::isEnabled), catalogs)
                                                      ))
                                              .then(Localization.lang("In order to proceed:"))
                                              .otherwise(""));
@@ -192,12 +198,12 @@ public class ManageStudyDefinitionViewModel {
         return researchQuestions;
     }
 
-    public ObservableList<String> getQueries() {
+    public ObservableList<StudyQuery> getQueries() {
         return queries;
     }
 
     public ObservableList<StudyCatalogItem> getCatalogs() {
-        return databases;
+        return catalogs;
     }
 
     public void addAuthor(String author) {
@@ -218,7 +224,7 @@ public class ManageStudyDefinitionViewModel {
         if (query.isBlank()) {
             return;
         }
-        queries.add(query);
+        queries.add(new StudyQuery(query));
     }
 
     public SlrStudyAndDirectory saveStudy() {
@@ -262,11 +268,11 @@ public class ManageStudyDefinitionViewModel {
                 authors,
                 title.getValueSafe(),
                 researchQuestions,
-                queries.stream().map(StudyQuery::new).collect(Collectors.toList()),
-                databases.stream()
-                         .map(item -> new StudyDatabase(item.getName(), item.isEnabled()))
-                         .filter(StudyDatabase::isEnabled)
-                         .collect(Collectors.toList()));
+                queries.stream().toList(),
+                catalogs.stream()
+                        .filter(StudyCatalogItem::isEnabled)
+                        .map(item -> new StudyCatalog(item.getName(), item.isEnabled(), item.getReason()))
+                        .toList());
     }
 
     public Property<String> titleProperty() {
@@ -285,22 +291,22 @@ public class ManageStudyDefinitionViewModel {
         researchQuestions.remove(item);
     }
 
-    public void deleteQuery(String item) {
+    public void deleteQuery(StudyQuery item) {
         queries.remove(item);
     }
 
     public void initializeSelectedCatalogs() {
         List<String> selectedCatalogs = workspacePreferences.getSelectedSlrCatalogs();
-        for (StudyCatalogItem catalog : databases) {
+        for (StudyCatalogItem catalog : catalogs) {
             catalog.setEnabled(selectedCatalogs.contains(catalog.getName()));
         }
     }
 
     public void updateSelectedCatalogs() {
-        List<String> selectedCatalogsList = databases.stream()
-                                                     .filter(StudyCatalogItem::isEnabled)
-                                                     .map(StudyCatalogItem::getName)
-                                                     .collect(Collectors.toList());
+        List<String> selectedCatalogsList = catalogs.stream()
+                                                    .filter(StudyCatalogItem::isEnabled)
+                                                    .map(StudyCatalogItem::getName)
+                                                    .toList();
 
         workspacePreferences.setSelectedSlrCatalogs(selectedCatalogsList);
     }
@@ -331,7 +337,7 @@ public class ManageStudyDefinitionViewModel {
 
     public void shareOnSearchRxiv(Path initialDirectory) {
         Study study = buildStudy();
-        if (study.getDatabases().isEmpty()) {
+        if (study.getCatalogs().isEmpty()) {
             dialogService.notify(Localization.lang("Please select at least one catalog."));
             return;
         }
